--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -169,8 +169,8 @@ nav.footer{
     }
 
     .curr{
-        font-size: 16px; 
+        font-size: 14px; 
         color: white; 
-        line-height: 1.6;
+        line-height: 2.4;
     }
 }
